--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             composer install --prefer-dist --no-progress
       - run:
           name: Run tests
-          command: ./vendor/bin/phpunit
+          command: php ./vendor/bin/phpunit --testdox ./src/tests/Feature
 workflows:
   build-and-test:
     jobs:
