--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,25 @@ jobs:
       - run:
           name: Run tests
           command: php ./src/vendor/phpunit --testdox ./src/tests/Feature
+
+  deploy-to-ec2:
+    docker:
+      - image: cimg/php:8.0-node
+    steps:
+      - checkout
+      - run:
+          name: SSH into EC2 and pull code
+          command: |
+            ssh -i ~/Downloads/aws-coachtech-furima-key.pem ec2-user@13.230.106.216 'cd /home/ec2-user/coachtech_furima && git pull'
+          no_output_timeout: 10m
 workflows:
+  version: 2
   build-and-test:
     jobs:
       - test-php
+      - deploy-to-ec2:
+          requires:
+            - test-php
+          filters:
+            branches:
+              only: master
