--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: SSH into EC2 and pull code
           command: |
-            ssh -i ~/Downloads/aws-coachtech-furima-key.pem ec2-user@13.230.106.216 'cd /home/ec2-user/coachtech_furima && git pull'
+            ssh -i /Users/tamo/.ssh/ec2_key ec2-user@13.230.106.216 'cd /home/ec2-user/coachtech_furima && git pull'
           no_output_timeout: 10m
 workflows:
   version: 2
