--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,4 @@ workflows:
             - test-php
           filters:
             branches:
-              only: master
-              
+              only: main
