--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run:
           name: SSH into EC2 and pull code
           command: |
-            ssh -i /Users/tamo/.ssh/ec2_key ec2-user@13.230.106.216 && git pull'
+            ssh -i /Users/tamo/.ssh/ec2_key ec2-user@13.230.106.216 'git pull'
           no_output_timeout: 10m
 workflows:
   version: 2
