--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run:
           name: SSH into EC2 and pull code
           command: |
-            ec2-user@13.230.106.216 'cd /home/ec2-user/coachtech_furima && git pull'
+            ssh -i $SSH_KEY_PATH ec2-user@13.230.106.216 'cd /home/ec2-user/coachtech_furima && git pull'
           no_output_timeout: 10m
 workflows:
   version: 2
