--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,10 @@ jobs:
           fingerprints:
           - "SHA256:qjla8mwHeAUlbj/9JRGJYtrH4G+s4ryvDotSqml0sZ0"
       - run:
+          name: Set permissions for SSH key
+          command: |
+            chmod 600 ~/.ssh/ec2_key
+      - run:
           name: SSH into EC2 and pull code
           command: |
             ssh -i $SSH_KEY_PATH ec2-user@13.230.106.216 'cd /home/ec2-user/coachtech_furima && git pull'
