--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           command: mkdir -p ~/.ssh
       - run:
           name: Install SSH key
-          command: echo "$EC2_DEPLOY_KEY" | base64 -d > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+          command: echo "$EC2_DEPLOY_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
       - run:
           name: Deploy to EC2
           command: |
